--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 /__pycache__
 /utils/__pycache__
 /.git
-/data
+
+/data/VOCdevkit
+/data/VOCtrainval_11-May-2012.tar
+
 /runs
+/models
 
 checkpoint.pth
